<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">今日我最幹</string>
    <string name="app_enter">今\n日\n我\n最\n幹</string>
    <string name="action_refresh">重新整理</string>
    <string name="action_search">搜尋</string>
    <string name="action_publish">發表幹文</string>
    <string name="action_reply">譙</string>
    <string name="action_control_panel">主控台</string>
    <string name="action_set_info">資料設定</string>
    <string name="action_mypage">我的主頁</string>
    <string name="action_filter">字串過濾</string>
    <string name="action_login">登入</string>
    <string name="action_logout">登出</string>
    <string name="action_reg">註冊</string>
    <string name="action_about">關於</string>
    <string name="article_category_all">不分類</string>
    <string name="article_pos_string">&#160;個幹</string>
    <string name="article_neg_string">&#160;個廢</string>
    <string name="article_comment_string">&#160;個譙</string>
    <string name="article_name_prefix">By&#160;</string>
    <string name="article_date_prefix"></string>
    <string name="hater_type_1">幹</string>
    <string name="hater_type_2">廢</string>
    <string name="hater_type_3">腦</string>
    <string name="hater_type_4">弱</string>
    <string name="hater_type_5">哈</string>
    <string name="hater_type_6">啥</string>
    <string name="hater_type_7">操</string>
    <string name="hater_type_color_1">#891817</string>
    <string name="hater_type_color_2">#891788</string>
    <string name="hater_type_color_3">#89174F</string>
    <string name="hater_type_color_4">#895117</string>
    <string name="hater_type_color_5">#4F8917</string>
    <string name="hater_type_color_6">#181789</string>
    <string name="hater_type_color_7">#511789</string>
    <string name="dialog_pos_btn"><b>幹</b></string>
    <string name="dialog_neg_btn"><b>廢</b></string>
    <string name="dialog_comments_btn"><b>譙</b></string>
    <string name="dialog_give_score_btn">+</string>
    <string name="dialog_pos_prefix">真想給你一個</string>
    <string name="dialog_pos_lastfix">！！</string>
    <string name="dialog_neg_prefix">你真是</string>
    <string name="dialog_neg_lastfix">到一個極限</string>
    <string name="dialog_comments_prefix">我忍不住要</string>
    <string name="dialog_comments_lastfix">你了！</string>
    <string name="dialog_processing">處理中&#8230;</string>
    <string name="dialog_loading">載入中&#8230;</string>
    <string name="btn_updating">更新中&#8230;</string>
    <string name="dialog_success">投票成功！</string>
    <string name="dialog_score_title_prefix">有誰按過</string>
    <string name="dialog_score_title_lastfix">？</string>
    <string name="dialog_error_voted">投票失敗，您已投過票囉！</string>
    <string name="reply_need_login">您尚未登入，故無法留言</string>
    <string name="no_article">找不到任何幹文！</string>
    <string name="dialog_exit_sure_title">提醒您</string>
    <string name="dialog_exit_sure_content">確定要離開？</string>
    <string name="dialog_internet_title">請檢察連線</string>
    <string name="dialog_internet_content">偵測不到網路連線，請確認您是否連上網路。</string>
    <string name="dialog_btn_yes">確定</string>
    <string name="dialog_btn_no">取消</string>
    <string name="dialog_purchase_failed">取消購買</string>
    <string name="dialog_purchase_success">購買成功</string>
    <string name="dialog_no_score_member">報告長官，沒有會員按過。</string>
    <string name="hello_world">Hello world!</string>

</resources>
