<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_refresh"
        android:icon="@drawable/ic_refresh"/>    
    <!--
      <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search"/>
    -->
	<item
        android:id="@+id/action_login"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_login"/>
	
	<item
        android:id="@+id/action_control_panel"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_control_panel">
		<menu>
			<item
		        android:id="@+id/action_mypage"
		        android:orderInCategory="100"
		        android:showAsAction="always"
		        android:title="@string/action_mypage"
		        android:icon="@drawable/ic_social_person"/>
			<item
		        android:id="@+id/action_setinfo"
		        android:orderInCategory="100"
		        android:showAsAction="always"
		        android:title="@string/action_set_info"
		        android:icon="@drawable/ic_hardware_keyboard"/>
		    <item
		        android:id="@+id/action_publish"
		        android:orderInCategory="100"
		        android:showAsAction="always"
		        android:title="@string/action_publish"
		        android:icon="@drawable/ic_compose"/>
			<!--<item
		        android:id="@+id/action_filter"
		        android:orderInCategory="100"
		        android:showAsAction="always"
		        android:title="@string/action_filter"
		        android:icon="@drawable/ic_hardware_keyboard"/>-->
			<item
		        android:id="@+id/action_logout"
		        android:orderInCategory="100"
		        android:showAsAction="always"
		        android:title="@string/action_logout"
		        android:icon="@drawable/ic_alerts_and_states_error"/>
			<item
		        android:id="@+id/action_about"
		        android:orderInCategory="100"
		        android:showAsAction="always"
		        android:title="@string/action_about"
		        android:icon="@drawable/ic_action_help"/>
		</menu>
    </item>
</menu>
